--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anjisha Pun - Portfolio</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%2387CEEB'/></svg>">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -66,10 +69,6 @@
             </div>
             <div class="menu-section">
                 <div class="menu-category">System</div>
-                <button class="menu-app" id="themeToggle">
-                    <span class="app-icon">🌓</span>
-                    <span class="app-name">Theme</span>
-                </button>
                 <button class="menu-app" id="downloadResume">
                     <span class="app-icon">📥</span>
                     <span class="app-name">Resume</span>
